# search

./: .gitignore  CMakeLists.txt  suchprogramme_8puzzle.txt
src/: board.c  board.h  main.c  node.c  node.h  search.c  search.h
